2012-08-28  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-expose-mode.lisp (expose-query-key-press-hook): Add
	an option to immediately select child if they can be directly
	accessed.

2012-08-25  Philippe Brochard  <pbrochard@common-lisp.net>

	* contrib/volume-mode.lisp: Add mouse buttons actions in volume
	mode. Add a volume button toolbar module.

2012-08-24  Philippe Brochard  <pbrochard@common-lisp.net>

	* contrib/mpd.lisp: New toolbar modules (available only if
	toolbar.lisp is loaded).
	Add a small parameter for toolbar modules useful with vertical
	toolbars.

2012-08-21  Philippe Brochard  <pbrochard@common-lisp.net>

	* contrib/reboot-halt.lisp: Add configuration command for system
	actions.

	* contrib/toolbar.lisp (toggle-toolbar-hide-state): New function.

2012-08-20  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp (add-in-never-managed-window-list): New
	function.

2012-08-20  Philipp Kroos  <philipp.kroos@t-online.de>

	* src/clfswm-placement.lisp (here-placement): Evaluates to current
	position of pointer.

2012-08-20  Philipp Kroos  <philipp.kroos@t-online.de>

	* contrib/toolbar.lisp: Add an expose-mode-button-module.

2012-08-19  Philippe Brochard  <pbrochard@common-lisp.net>

	* contrib/toolbar.lisp (remove-toolbar): New function.

2012-08-18  Philippe Brochard  <pbrochard@common-lisp.net>

	* contrib/toolbar.lisp: Add configurable colors in toolbar
	modules.

2012-08-16  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/tools.lisp: Factorize system usage information collection.
	(start-system-poll): Use a lock file instead of a local variable.

	* contrib/toolbar.lisp: Add memory, cpu and battery usage module
	with a poll methode. More responsive but up to date every 10s by
	default.

2012-08-15  Philippe Brochard  <pbrochard@common-lisp.net>

	* contrib/toolbar.lisp: Add a clickable label module for toolbar.
	Add a clickable entry to open the CLFSWM main menu.