@@ -69,7 +69,7 @@
   (let* ((sed "sed 's/^.*\\[\\([[:digit:]]\\+\\)%\\].*\\[\\(on\\|off\\)\\].*$/\\1%\\2/'")
          (fmt "amixer ~A ~A~{ ~A~} 2>/dev/null | tail -1 | ~A")
          (shell (format nil fmt cmd scontrol parameters sed))
-         (line (read-line (do-shell shell) nil nil)))
+         (line (read-line (do-shell shell) nil t)))
     (when line
       (let* ((ratio (parse-integer line :junk-allowed t))
              (%-pos (position #\% line)))
