@@ -160,7 +160,6 @@
      (with-xlib-protect (:main-loop nil)
        (call-hook *loop-hook*)
        (process-timers)
-       ;;(with-xlib-protect ()
        (when (xlib:event-listen *display* *loop-timeout*)
 	 (xlib:process-event *display* :handler #'handle-event))
        (xlib:display-finish-output *display*))))
